--- a/pfcptest/Makefile.am
+++ b/pfcptest/Makefile.am
@@ -33,11 +33,12 @@ pfcptest_DEPENDENCIES = \
 
 # Sources for pfcptest
 pfcptest_SOURCES =   \
-   main.cpp         \
+   main.cpp          \
+   test.cpp          \
    pcaps/pcaps.cpp
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
 pfcptest_CPPFLAGS = -Wall -std=c++11 $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -I../exampleProgram/pfcp/include -I../include/epc -I../exampleProgram/libpfcp/include
 pfcptest_LDFLAGS = -Wl,-rpath='../exampleProgram/libpfcp/lib' -static-libstdc++ 
-pfcptest_LDADD = $(PCAPPP_LIBS_DIR) -L../src -L../exampleProgram/libpfcp/lib $(PCAPPP_LIBS) -lpfcpr15 -lepc -lpfcp -lrt
+pfcptest_LDADD = $(PCAPPP_LIBS_DIR) -L../src -L../exampleProgram/libpfcp/lib $(PCAPPP_LIBS) -lpfcpr15 -lepc -lpfcp -lrt -lssl -lcrypto
