Added set/get for query timeout and query tries to DNS::Cache.  Updated libpfcpr15 build process.

--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,7 @@ AC_PROG_RANLIB
 AC_CONFIG_FILES(Makefile
                 src/Makefile
                 include/Makefile
+                pfcpr15/Makefile
 		exampleProgram/Makefile
                 exampleProgram/pfcp/Makefile)
 
