--- a/Makefile.in
+++ b/Makefile.in
@@ -305,7 +305,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src include exampleProgram exampleProgram/pfcp
+SUBDIRS = src include pfcpr15 exampleProgram exampleProgram/pfcp
 all: all-recursive
 
 .SUFFIXES:
