Updates .vscode paths

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,10 +46,10 @@
          "name": "debug pfcptest",
          "type": "cppdbg",
          "request": "launch",
-         "program": "${workspaceFolder}/pfcptest/pfcptest",
+         "program": "${workspaceFolder}/pfcp/pfcptest/pfcptest",
          "args": [],
          "stopAtEntry": false,
-         "cwd": "${workspaceFolder}/pfcptest",
+         "cwd": "${workspaceFolder}/pfcp/pfcptest",
          "environment": [],
          "externalConsole": false,
          "MIMode": "gdb",
