--- a/pfcp/pfcpr15/Makefile.am
+++ b/pfcp/pfcpr15/Makefile.am
@@ -28,7 +28,8 @@ lib_LIBRARIES = libpfcpr15.a
 libpfcpr15_a_SOURCES = \
    ../../src/pfcpr15.cpp
 
-nobase_include_HEADERS =          \
+includedir = /usr/local/include/epc
+include_HEADERS =          \
    ../../include/epc/pfcpr15.h    \
    ../../include/epc/pfcpr15inl.h
 
