--- a/pfcp/pfcptest/Makefile.in
+++ b/pfcp/pfcptest/Makefile.in
@@ -114,8 +114,9 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 PROGRAMS = $(noinst_PROGRAMS)
 am__dirstamp = $(am__leading_dot)dirstamp
-am_pfcptest_OBJECTS = pfcptest-main.$(OBJEXT) pfcptest-test.$(OBJEXT) \
-	pcaps/pfcptest-pcaps.$(OBJEXT)
+am_pfcptest_OBJECTS = pfcptest-main.$(OBJEXT) pfcptest-pcpp.$(OBJEXT) \
+	pfcptest-test.$(OBJEXT) pcaps/pfcptest-pcaps.$(OBJEXT) \
+	wrapper/pfcptest-wrapper.$(OBJEXT)
 pfcptest_OBJECTS = $(am_pfcptest_OBJECTS)
 pfcptest_LINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) \
 	$(pfcptest_LDFLAGS) $(LDFLAGS) -o $@
@@ -281,16 +282,18 @@ pfcptest_DEPENDENCIES = \
 
 # Sources for pfcptest
 pfcptest_SOURCES = \
-   main.cpp          \
-   test.cpp          \
-   pcaps/pcaps.cpp
+   main.cpp            \
+   pcpp.cpp            \
+   test.cpp            \
+   pcaps/pcaps.cpp     \
+   wrapper/wrapper.cpp
 
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
 pfcptest_CPPFLAGS = -Wall -std=c++11 $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -I$(top_builddir)/exampleProgram/pfcp/include -I$(top_builddir)/include/epc -I$(top_builddir)/exampleProgram/libpfcp/include
 pfcptest_LDFLAGS = -Wl,-rpath='$(top_builddir)/exampleProgram/libpfcp/lib' -static-libstdc++ 
-pfcptest_LDADD = $(PCAPPP_LIBS_DIR) -L$(top_builddir)/src -L$(top_builddir)/exampleProgram/libpfcp/lib $(PCAPPP_LIBS) -lpfcpr15 -lepc -lpfcp -lrt
+pfcptest_LDADD = $(PCAPPP_LIBS_DIR) -L$(top_builddir)/src -L$(top_builddir)/exampleProgram/libpfcp/lib -L$(top_builddir)/pfcp/pfcpr15 $(PCAPPP_LIBS) -lpfcpr15 -lepc -lpfcp -lrt -lpthread
 all: all-am
 
 .SUFFIXES:
@@ -335,6 +338,14 @@ pcaps/$(DEPDIR)/$(am__dirstamp):
 	@: > pcaps/$(DEPDIR)/$(am__dirstamp)
 pcaps/pfcptest-pcaps.$(OBJEXT): pcaps/$(am__dirstamp) \
 	pcaps/$(DEPDIR)/$(am__dirstamp)
+wrapper/$(am__dirstamp):
+	@$(MKDIR_P) wrapper
+	@: > wrapper/$(am__dirstamp)
+wrapper/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) wrapper/$(DEPDIR)
+	@: > wrapper/$(DEPDIR)/$(am__dirstamp)
+wrapper/pfcptest-wrapper.$(OBJEXT): wrapper/$(am__dirstamp) \
+	wrapper/$(DEPDIR)/$(am__dirstamp)
 
 pfcptest$(EXEEXT): $(pfcptest_OBJECTS) $(pfcptest_DEPENDENCIES) $(EXTRA_pfcptest_DEPENDENCIES) 
 	@rm -f pfcptest$(EXEEXT)
@@ -343,13 +354,16 @@ pfcptest$(EXEEXT): $(pfcptest_OBJECTS) $(pfcptest_DEPENDENCIES) $(EXTRA_pfcptest
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 	-rm -f pcaps/*.$(OBJEXT)
+	-rm -f wrapper/*.$(OBJEXT)
 
 distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pfcptest-main.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pfcptest-pcpp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pfcptest-test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@pcaps/$(DEPDIR)/pfcptest-pcaps.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@wrapper/$(DEPDIR)/pfcptest-wrapper.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
@@ -381,6 +395,20 @@ pfcptest-main.obj: main.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o pfcptest-main.obj `if test -f 'main.cpp'; then $(CYGPATH_W) 'main.cpp'; else $(CYGPATH_W) '$(srcdir)/main.cpp'; fi`
 
+pfcptest-pcpp.o: pcpp.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT pfcptest-pcpp.o -MD -MP -MF $(DEPDIR)/pfcptest-pcpp.Tpo -c -o pfcptest-pcpp.o `test -f 'pcpp.cpp' || echo '$(srcdir)/'`pcpp.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/pfcptest-pcpp.Tpo $(DEPDIR)/pfcptest-pcpp.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='pcpp.cpp' object='pfcptest-pcpp.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o pfcptest-pcpp.o `test -f 'pcpp.cpp' || echo '$(srcdir)/'`pcpp.cpp
+
+pfcptest-pcpp.obj: pcpp.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT pfcptest-pcpp.obj -MD -MP -MF $(DEPDIR)/pfcptest-pcpp.Tpo -c -o pfcptest-pcpp.obj `if test -f 'pcpp.cpp'; then $(CYGPATH_W) 'pcpp.cpp'; else $(CYGPATH_W) '$(srcdir)/pcpp.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/pfcptest-pcpp.Tpo $(DEPDIR)/pfcptest-pcpp.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='pcpp.cpp' object='pfcptest-pcpp.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o pfcptest-pcpp.obj `if test -f 'pcpp.cpp'; then $(CYGPATH_W) 'pcpp.cpp'; else $(CYGPATH_W) '$(srcdir)/pcpp.cpp'; fi`
+
 pfcptest-test.o: test.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT pfcptest-test.o -MD -MP -MF $(DEPDIR)/pfcptest-test.Tpo -c -o pfcptest-test.o `test -f 'test.cpp' || echo '$(srcdir)/'`test.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/pfcptest-test.Tpo $(DEPDIR)/pfcptest-test.Po
@@ -408,6 +436,20 @@ pcaps/pfcptest-pcaps.obj: pcaps/pcaps.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='pcaps/pcaps.cpp' object='pcaps/pfcptest-pcaps.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o pcaps/pfcptest-pcaps.obj `if test -f 'pcaps/pcaps.cpp'; then $(CYGPATH_W) 'pcaps/pcaps.cpp'; else $(CYGPATH_W) '$(srcdir)/pcaps/pcaps.cpp'; fi`
+
+wrapper/pfcptest-wrapper.o: wrapper/wrapper.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT wrapper/pfcptest-wrapper.o -MD -MP -MF wrapper/$(DEPDIR)/pfcptest-wrapper.Tpo -c -o wrapper/pfcptest-wrapper.o `test -f 'wrapper/wrapper.cpp' || echo '$(srcdir)/'`wrapper/wrapper.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) wrapper/$(DEPDIR)/pfcptest-wrapper.Tpo wrapper/$(DEPDIR)/pfcptest-wrapper.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='wrapper/wrapper.cpp' object='wrapper/pfcptest-wrapper.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o wrapper/pfcptest-wrapper.o `test -f 'wrapper/wrapper.cpp' || echo '$(srcdir)/'`wrapper/wrapper.cpp
+
+wrapper/pfcptest-wrapper.obj: wrapper/wrapper.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT wrapper/pfcptest-wrapper.obj -MD -MP -MF wrapper/$(DEPDIR)/pfcptest-wrapper.Tpo -c -o wrapper/pfcptest-wrapper.obj `if test -f 'wrapper/wrapper.cpp'; then $(CYGPATH_W) 'wrapper/wrapper.cpp'; else $(CYGPATH_W) '$(srcdir)/wrapper/wrapper.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) wrapper/$(DEPDIR)/pfcptest-wrapper.Tpo wrapper/$(DEPDIR)/pfcptest-wrapper.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='wrapper/wrapper.cpp' object='wrapper/pfcptest-wrapper.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(pfcptest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o wrapper/pfcptest-wrapper.obj `if test -f 'wrapper/wrapper.cpp'; then $(CYGPATH_W) 'wrapper/wrapper.cpp'; else $(CYGPATH_W) '$(srcdir)/wrapper/wrapper.cpp'; fi`
 
 ID: $(am__tagged_files)
 	$(am__define_uniq_tagged_files); mkid -fID $$unique
@@ -523,6 +565,8 @@ distclean-generic:
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
 	-rm -f pcaps/$(DEPDIR)/$(am__dirstamp)
 	-rm -f pcaps/$(am__dirstamp)
+	-rm -f wrapper/$(DEPDIR)/$(am__dirstamp)
+	-rm -f wrapper/$(am__dirstamp)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
@@ -532,7 +576,7 @@ clean: clean-am
 clean-am: clean-generic clean-noinstPROGRAMS mostlyclean-am
 
 distclean: distclean-am
-	-rm -rf ./$(DEPDIR) pcaps/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) pcaps/$(DEPDIR) wrapper/$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -578,7 +622,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-	-rm -rf ./$(DEPDIR) pcaps/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) pcaps/$(DEPDIR) wrapper/$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
