--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "modules/PcapPlusPlus"]
 	path = modules/PcapPlusPlus
 	url = https://github.com/seladb/PcapPlusPlus.git
+[submodule "modules/libpfcp"]
+	path = modules/libpfcp
+	url = http://10.155.205.206/tiaspecialprojects/libpfcp.git
