--- a/Makefile.in
+++ b/Makefile.in
@@ -305,7 +305,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src include pfcp/pfcpr15 exampleProgram exampleProgram/pfcp pfcp/pfcptest
+SUBDIRS = src include pfcp/pfcpr15 exampleProgram pfcp/pfcpex pfcp/pfcptest
 all: all-recursive
 
 .SUFFIXES:
