moved exampleProgram/pfcp to pfcp/pfcpex

--- a/configure.ac
+++ b/configure.ac
@@ -42,9 +42,10 @@ AC_PROG_RANLIB
 AC_CONFIG_FILES(Makefile
                 src/Makefile
                 include/Makefile
-                pfcp/pfcpr15/Makefile
                 exampleProgram/Makefile
                 exampleProgram/pfcp/Makefile
+                pfcp/pfcpr15/Makefile
+                pfcp/pfcpex/Makefile
                 pfcp/pfcptest/Makefile)
 
 #AC_CONFIG_COMMANDS([submodules],[git submodule update --init --recursive])
