--- a/pfcp/pfcpex/Makefile.in
+++ b/pfcp/pfcpex/Makefile.in
@@ -104,7 +104,7 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 noinst_PROGRAMS = bin/pfcpex$(EXEEXT)
-subdir = exampleProgram/pfcp
+subdir = pfcp/pfcpex
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -277,7 +277,7 @@ top_srcdir = @top_srcdir@
 
 # Sources for epc
 bin_pfcpex_DEPENDENCIES = \
-   $(top_builddir)/exampleProgram/libpfcp/lib/libpfcp.so \
+   $(top_builddir)/modules/libpfcp/lib/libpfcp.so \
    $(top_builddir)/src/libepc.a \
    $(top_builddir)/src/libpfcpr15.a
 
@@ -287,12 +287,12 @@ bin_pfcpex_SOURCES = \
 
 
 # Linker options libTestProgram
-bin_pfcpex_LDFLAGS = -Wl,-rpath,../libpfcp/lib
+bin_pfcpex_LDFLAGS = -Wl,-rpath,../../modules/libpfcp/lib
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
-bin_pfcpex_CPPFLAGS = -Wall -std=c++11 -I./include -I../../include/epc -I../../modules/spdlog/include -I../libpfcp/include
-bin_pfcpex_LDADD = -L../libpfcp/lib -L../../src -lpfcpr15 -lpfcp -lepc -lpthread -lrt
+bin_pfcpex_CPPFLAGS = -Wall -std=c++11 -I./include -I../../include/epc -I../../modules/spdlog/include -I../../modules/libpfcp/include
+bin_pfcpex_LDADD = -L../../modules/libpfcp/lib -L../../src -lpfcpr15 -lpfcp -lepc -lpthread -lrt
 all: all-am
 
 .SUFFIXES:
@@ -306,9 +306,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu exampleProgram/pfcp/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu pfcp/pfcpex/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu exampleProgram/pfcp/Makefile
+	  $(AUTOMAKE) --gnu pfcp/pfcpex/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
