updated pfcpr15 and pfcptest make files

--- a/pfcp/pfcptest/Makefile.in
+++ b/pfcp/pfcptest/Makefile.in
@@ -275,7 +275,7 @@ top_srcdir = @top_srcdir@
 #######################################
 # Build information for each library
 pfcptest_DEPENDENCIES = \
-   $(top_builddir)/exampleProgram/libpfcp/lib/libpfcp.so \
+   $(top_builddir)/modules/libpfcp/lib/libpfcp.so \
    $(top_builddir)/src/libepc.a \
    $(top_builddir)/src/libpfcpr15.a
 
@@ -291,9 +291,9 @@ pfcptest_SOURCES = \
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
-pfcptest_CPPFLAGS = -Wall -std=c++11 $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -I$(top_builddir)/exampleProgram/pfcp/include -I$(top_builddir)/include/epc -I$(top_builddir)/exampleProgram/libpfcp/include
-pfcptest_LDFLAGS = -Wl,-rpath='$(top_builddir)/exampleProgram/libpfcp/lib' -static-libstdc++ 
-pfcptest_LDADD = $(PCAPPP_LIBS_DIR) -L$(top_builddir)/src -L$(top_builddir)/exampleProgram/libpfcp/lib -L$(top_builddir)/pfcp/pfcpr15 $(PCAPPP_LIBS) -lpfcpr15 -lepc -lpfcp -lrt -lpthread
+pfcptest_CPPFLAGS = -Wall -std=c++11 $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -I$(top_builddir)/pfcp/pfcpex/include -I$(top_builddir)/include/epc -I$(top_builddir)/modules/libpfcp/include
+pfcptest_LDFLAGS = -Wl,-rpath='$(top_builddir)/modules/libpfcp/lib' -static-libstdc++ 
+pfcptest_LDADD = $(PCAPPP_LIBS_DIR) -L$(top_builddir)/src -L$(top_builddir)/modules/libpfcp/lib -L$(top_builddir)/pfcp/pfcpr15 $(PCAPPP_LIBS) -lpfcpr15 -lepc -lpfcp -lrt -lpthread
 all: all-am
 
 .SUFFIXES:
