EGetOpt - enhanced array support EFqdn - added new class and associated tests in exampleProgram/test.cpp PFCP 	- added "state" management for local/remote nodes 	- added remote node reference to various handlers 	- optionally allocate a sequence number when creating an AppMsgReq derived object ESocket::Address - added static getFamily() method that determines the protocol family of the provided string

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -139,7 +139,7 @@
       {
          "label": "install epctools",
          "type": "shell",
-         "command": "sudo make install",
+         "command": "make && sudo make install",
          "group": {
             "kind": "build",
             "isDefault": false
